# template-project-py

./: .envrc_example  .pre-commit-config.yaml  README.md  pyproject.toml
