[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["nathan-wien"]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.5"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py310']
